--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -119,3 +119,11 @@ Include = /etc/pacman.d/arcolinux-mirrorlist
 [arcolinux_repo_iso]
 SigLevel = Required DatabaseOptional
 Include = /etc/pacman.d/arcolinux-mirrorlist
+
+[hefftor-repo]
+SigLevel = Optional TrustedOnly 
+Server = https://bradheff.github.io/$repo/$arch
+
+[viccktory-repo]
+SigLevel = Optional TrustedOnly 
+Server = https://vicck-tech.github.io/$repo/$arch
