--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -124,6 +124,6 @@ Include = /etc/pacman.d/arcolinux-mirrorlist
 SigLevel = Optional TrustedOnly 
 Server = https://bradheff.github.io/$repo/$arch
 
-[viccktory-repo]
+[victory-repo]
 SigLevel = Optional TrustedOnly 
 Server = https://vicck-tech.github.io/$repo/$arch
